--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
+**/.gradle
+**/build/
+!**/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -9,6 +9,7 @@ build/
 **/.idea/jarRepositories.xml
 **/.idea/compiler.xml
 **/.idea/libraries/
+**/.idea
 *.iws
 *.iml
 *.ipr
