--- a/ICGWireFrame/build.gradle
+++ b/ICGWireFrame/build.gradle
@@ -22,6 +22,12 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.ejml/ejml-simple
     implementation 'org.ejml:ejml-simple:0.43.1'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 }
 
 test {
